@@ -51,6 +51,7 @@ Dmitry Mikhin		dmitrym@acres.com.au
 Doug Evans		devans@cygnus.com
 Duncan Gibson		duncan@thermal.esa.int
 Eleftherios Gkioulekas	lf@amath.washington.edu
+Elmar Hoffmann		elho@elho.net
 Elrond			Elrond@Wunder-Nett.org
 Enrico Scholz		enrico.scholz@informatik.tu-chemnitz.de
 Erez Zadok		ezk@cs.columbia.edu
