@@ -1,3 +1,9 @@
+2003-10-21  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/am/install.am (install-strip): Override install_sh_PROGRAM
+	too.
+	Report from Elmar Hoffmann.
+
 2003-10-07  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* configure.in: Bump version to 1.7.8a.
